mandado por flor